feat: optimize the images, add sources to the page

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <li class="content__fact">
                 <span class="content__fact-label">Genres: </span>
                 <span class="content__fact-value"
-                  >: • Horror • Science Fiction • Action
+                  >• Horror • Science Fiction • Action
                 </span>
               </li>
               <li class="content__fact">
@@ -132,78 +132,74 @@
 
         <aside class="series">
           <h2>Series</h2>
-          <ul class="series-list">
-            <li class="serie-item">
-              <h3 class="serie-title">Alien (1979)</h3>
-              <a href="">
-                <img src="" alt="Alien (1979)" />
-              </a>
-            </li>
-            <li class="serie-item">
-              <h3 class="serie-title">Aliens (1986)</h3>
-              <a href="">
-                <img src="" alt="Alien (1979)" />
-              </a>
-            </li>
-            <li class="serie-item">
-              <h3 class="serie-title">Alien 3 (1992)</h3>
-              <a href="">
-                <img src="" alt="Alien (1979)" />
-              </a>
-            </li>
-            <li class="serie-item">
-              <h3 class="serie-title">Alien: Resurrection (1997)</h3>
-              <a href="">
-                <img src="" alt="Alien (1979)" />
-              </a>
-            </li>
-            <li class="serie-item">
-              <h3 class="serie-title">Alien vs. Predator (2004)</h3>
-              <a href="">
-                <img src="" alt="Alien (1979)" />
-              </a>
-            </li>
-            <li class="serie-item">
-              <h3 class="serie-title">Aliens vs. Predator: Requiem (2007)</h3>
-              <a href="">
-                <img src="" alt="Alien (1979)" />
-              </a>
-            </li>
-            <li class="serie-item">
-              <h3 class="serie-title">Prometheus (2012)</h3>
-              <a href="">
-                <img src="" alt="Alien (1979)" />
-              </a>
-            </li>
 
-            <li class="serie-item">
-              <h3 class="serie-title">Alien: Covenant (2017)</h3>
-              <a href="">
-                <img src="" alt="Alien (1979)" />
-              </a>
-            </li>
-          </ul>
+          <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <h3 class="serie-title">Alien (1979)</h3>
+                <a href="">
+                  <img src="assets/series/alien_1979.png" alt="Alien (1979)" />
+                </a>
+              </div>
+
+              <div class="swiper-slide">
+                <h3 class="serie-title">Aliens (1986)</h3>
+                <a href="">
+                  <img src="assets/series/aliens_1986.png" alt="Aliens (1986)" />
+                </a>
+              </div>
+
+              <div class="swiper-slide">
+                <h3 class="serie-title">Alien 3 (1992)</h3>
+                <a href="">
+                  <img src="assets/series/alien_3_1992.png" alt="Alien 3 (1992)" />
+                </a>
+              </div>
+
+              <div class="swiper-slide">
+                <h3 class="serie-title">Alien: Resurrection (1997)</h3>
+                <a href="">
+                  <img src="assets/series/alien_resurrection_1997.png" alt="Alien: Resurrection (1997)" />
+                </a>
+              </div>
+
+              <div class="swiper-slide">
+                <h3 class="serie-title">Alien vs. Predator (2004)</h3>
+                <a href="">
+                  <img src="assets/series/aliens_vs_predator_2004.png" alt="Alien vs. Predator (2004)" />
+                </a>
+              </div>
+
+              <div class="swiper-slide">
+                <h3 class="serie-title">Aliens vs. Predator: Requiem (2007)</h3>
+                <a href="">
+                  <img src="assets/series/alien_predator_2007.png" alt="Aliens vs. Predator: Requiem (2007)" />
+                </a>
+              </div>
+
+              <div class="swiper-slide">
+                <h3 class="serie-title">Prometheus (2012)</h3>
+                <a href="">
+                  <img src="assets/series/prometheus_2012.png" alt="Prometheus (2012)" />
+                </a>
+              </div>
+
+              <div class="swiper-slide">
+                <h3 class="serie-title">Alien: Covenant (2017)</h3>
+                <a href="">
+                  <img src="assets/series/alien_covenant_2017.png" alt="Alien: Covenant (2017)" />
+                </a>
+              </div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+          </div>
+
         </aside>
         <!-- /.series -->
       </div>
       <!-- /.container -->
-
-      <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">Slide 1</div>
-          <div class="swiper-slide">Slide 2</div>
-          <div class="swiper-slide">Slide 3</div>
-          <div class="swiper-slide">Slide 4</div>
-          <div class="swiper-slide">Slide 5</div>
-          <div class="swiper-slide">Slide 6</div>
-          <div class="swiper-slide">Slide 7</div>
-          <div class="swiper-slide">Slide 8</div>
-          <div class="swiper-slide">Slide 9</div>
-        </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-pagination"></div>
-      </div>
     </main>
 
     <footer class="footer">
