feat: add favicon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon.ico"
+    />
 
     <title>Alien: Romulus</title>
 
@@ -137,57 +143,102 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <h3 class="serie-title">Alien (1979)</h3>
-                <a href="https://youtu.be/4lRNBd8Vook?si=HLnGflyDvZTzFSPs" target="_blank">
+                <a
+                  href="https://youtu.be/4lRNBd8Vook?si=HLnGflyDvZTzFSPs"
+                  target="_blank"
+                >
                   <img src="assets/series/alien_1979.png" alt="Alien (1979)" />
                 </a>
               </div>
 
               <div class="swiper-slide">
                 <h3 class="serie-title">Aliens (1986)</h3>
-                <a href="https://youtu.be/oSeQQlaCZgU?si=km6F8IJ-XnL9-Ai-" target="_blank">
-                  <img src="assets/series/aliens_1986.png" alt="Aliens (1986)" />
+                <a
+                  href="https://youtu.be/oSeQQlaCZgU?si=km6F8IJ-XnL9-Ai-"
+                  target="_blank"
+                >
+                  <img
+                    src="assets/series/aliens_1986.png"
+                    alt="Aliens (1986)"
+                  />
                 </a>
               </div>
 
               <div class="swiper-slide">
                 <h3 class="serie-title">Alien 3 (1992)</h3>
-                <a href="https://youtu.be/KUTaNMJJBa8?si=40Sog4JmgPOWnwZM" target="_blank">
-                  <img src="assets/series/alien_3_1992.png" alt="Alien 3 (1992)" />
+                <a
+                  href="https://youtu.be/KUTaNMJJBa8?si=40Sog4JmgPOWnwZM"
+                  target="_blank"
+                >
+                  <img
+                    src="assets/series/alien_3_1992.png"
+                    alt="Alien 3 (1992)"
+                  />
                 </a>
               </div>
 
               <div class="swiper-slide">
                 <h3 class="serie-title">Alien: Resurrection (1997)</h3>
-                <a href="https://youtu.be/53If-aOy58A?si=GIXuXzV-4HS9SkzV" target="_blank">
-                  <img src="assets/series/alien_resurrection_1997.png" alt="Alien: Resurrection (1997)" />
+                <a
+                  href="https://youtu.be/53If-aOy58A?si=GIXuXzV-4HS9SkzV"
+                  target="_blank"
+                >
+                  <img
+                    src="assets/series/alien_resurrection_1997.png"
+                    alt="Alien: Resurrection (1997)"
+                  />
                 </a>
               </div>
 
               <div class="swiper-slide">
                 <h3 class="serie-title">Alien vs. Predator (2004)</h3>
-                <a href="https://youtu.be/Cld40qD7HcY?si=8taAknbyhQxGSDqc" target="_blank">
-                  <img src="assets/series/aliens_vs_predator_2004.png" alt="Alien vs. Predator (2004)" />
+                <a
+                  href="https://youtu.be/Cld40qD7HcY?si=8taAknbyhQxGSDqc"
+                  target="_blank"
+                >
+                  <img
+                    src="assets/series/aliens_vs_predator_2004.png"
+                    alt="Alien vs. Predator (2004)"
+                  />
                 </a>
               </div>
 
               <div class="swiper-slide">
                 <h3 class="serie-title">Aliens vs. Predator: Requiem (2007)</h3>
-                <a href="https://youtu.be/XbTWLrZLYmU?si=ojm5cl7rkRSC-bmY" target="_blank">
-                  <img src="assets/series/alien_predator_2007.png" alt="Aliens vs. Predator: Requiem (2007)" />
+                <a
+                  href="https://youtu.be/XbTWLrZLYmU?si=ojm5cl7rkRSC-bmY"
+                  target="_blank"
+                >
+                  <img
+                    src="assets/series/alien_predator_2007.png"
+                    alt="Aliens vs. Predator: Requiem (2007)"
+                  />
                 </a>
               </div>
 
               <div class="swiper-slide">
                 <h3 class="serie-title">Prometheus (2012)</h3>
-                <a href="https://youtu.be/XbTWLrZLYmU?si=PeIRkizUGZxwRMa0" target="_blank">
-                  <img src="assets/series/prometheus_2012.png" alt="Prometheus (2012)" />
+                <a
+                  href="https://youtu.be/XbTWLrZLYmU?si=PeIRkizUGZxwRMa0"
+                  target="_blank"
+                >
+                  <img
+                    src="assets/series/prometheus_2012.png"
+                    alt="Prometheus (2012)"
+                  />
                 </a>
               </div>
 
               <div class="swiper-slide">
                 <h3 class="serie-title">Alien: Covenant (2017)</h3>
-                <a href="https://youtu.be/svnAD0TApb8?si=WLrGiJ4tBGkQoeAX" target="_blank">
-                  <img src="assets/series/alien_covenant_2017.png" alt="Alien: Covenant (2017)" />
+                <a
+                  href="https://youtu.be/svnAD0TApb8?si=WLrGiJ4tBGkQoeAX"
+                  target="_blank"
+                >
+                  <img
+                    src="assets/series/alien_covenant_2017.png"
+                    alt="Alien: Covenant (2017)"
+                  />
                 </a>
               </div>
             </div>
@@ -195,7 +246,6 @@
             <div class="swiper-button-prev"></div>
             <div class="swiper-pagination"></div>
           </div>
-
         </aside>
         <!-- /.series -->
       </div>
