feat: add logo, svg images, connect font

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       sizes="32x32"
       href="/assets/favicon.ico"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Alien: Romulus</title>
 
@@ -54,8 +60,11 @@
         <div class="header">
           <nav class="menu-list">
             <a href="#" class="menu-link">
-              <span class="menu-link_title">Alien</span>
-              <span class="menu-link_subtitle">Romulus</span>
+              <img
+                src="assets/logo.png"
+                alt="Logo: Alien Romulus"
+                class="logo"
+              />
             </a>
           </nav>
         </div>
@@ -129,7 +138,11 @@
             href="https://youtu.be/x0XDEhP4MQs?si=kjXXEdyCwpedHHbi"
             class="play"
           >
-            <img class="playImg" src="" alt="play button" />
+            <img
+              class="playImg"
+              src="assets/playButton.svg"
+              alt="play button"
+            />
           </a>
 
           <!-- /.play -->
