--- a/index.html
+++ b/index.html
@@ -24,35 +24,10 @@
       rel="stylesheet"
     />
 
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+
     <title>Alien: Romulus</title>
-
-    <style>
-      .swiper {
-        width: 100%;
-        height: 100%;
-      }
-
-      .swiper-slide {
-        text-align: center;
-        font-size: 18px;
-        background: #fff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      .swiper-slide img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-
-      .swiper {
-        margin-left: auto;
-        margin-right: auto;
-      }
-    </style>
   </head>
   <body>
     <header>
