feat: add the css styles for body, main content

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
 
@@ -52,75 +52,85 @@
       <div class="container">
         <div class="main-content">
           <div class="content">
-            <span class="genre animate__animated animate__fadeInRight"
-              >2024, Horror</span
-            >
-            <div class="rating animate__animated animate__fadeInRight">
-              <div class="rating-stars">
-                <img src="assets/star.svg" alt="star" class="star" />
-                <img src="assets/star.svg" alt="star" class="star" />
-                <img src="assets/star.svg" alt="star" class="star" />
-                <img src="assets/star.svg" alt="star" class="star" />
-                <img src="assets/star.svg" alt="star" class="star" />
-                <img src="assets/star.svg" alt="star" class="star" />
-                <img src="assets/star.svg" alt="star" class="star" />
-                <img src="assets/star-o.svg" alt="star-o" class="star" />
-                <img src="assets/star-o.svg" alt="star-o" class="star" />
-                <img src="assets/star-o.svg" alt="star-o" class="star" />
+            <div class="content-description">
+              <span class="genre animate__animated animate__fadeInRight"
+                >2024, Horror</span
+              >
+              <div class="rating animate__animated animate__fadeInRight">
+                <div class="rating-stars">
+                  <img src="assets/star.svg" alt="star" class="star" />
+                  <img src="assets/star.svg" alt="star" class="star" />
+                  <img src="assets/star.svg" alt="star" class="star" />
+                  <img src="assets/star.svg" alt="star" class="star" />
+                  <img src="assets/star.svg" alt="star" class="star" />
+                  <img src="assets/star.svg" alt="star" class="star" />
+                  <img src="assets/star.svg" alt="star" class="star" />
+                  <img src="assets/star-o.svg" alt="star-o" class="star" />
+                  <img src="assets/star-o.svg" alt="star-o" class="star" />
+                  <img src="assets/star-o.svg" alt="star-o" class="star" />
+                </div>
+                <div class="rating-number">7/10</div>
               </div>
-              <div class="rating-number">7/10</div>
-            </div>
-            <h1 class="main-title animate__animated animate__fadeInRight">
-              Alien: Romulus
-            </h1>
-            <p class="main-description animate__animated animate__fadeInRight">
-              While scavenging the deep ends of a derelict space station, a
-              group of young space colonizers come face to face with the most
-              terrifying life form in the universe.
-            </p>
+              <h1 class="main-title animate__animated animate__fadeInRight">
+                Alien: Romulus
+              </h1>
+              <p
+                class="main-description animate__animated animate__fadeInRight"
+              >
+                While scavenging the deep ends of a derelict space station, a
+                group of young space colonizers come face to face with the most
+                terrifying life form in the universe.
+              </p>
 
-            <ul class="content__facts">
-              <li class="content__fact">
-                <span class="content__fact-label">Languages: </span>
-                <span class="content__fact-value">English </span>
-              </li>
-              <li class="content__fact">
-                <span class="content__fact-label">Genres: </span>
-                <span class="content__fact-value"
-                  >• Horror • Science Fiction • Action
-                </span>
-              </li>
-              <li class="content__fact">
-                <span class="content__fact-label">Country: </span>
-                <span class="content__fact-value"
-                  >United States of America
-                </span>
-              </li>
-              <li class="content__fact">
-                <span class="content__fact-label">Budget: </span>
-                <span class="content__fact-value">80 000 000 $ </span>
-              </li>
-              <li class="content__fact">
-                <span class="content__fact-label">Premiere: </span>
-                <span class="content__fact-value">August 13, 2024 </span>
-              </li>
-            </ul>
+              <ul class="main-description content__facts">
+                <li class="content__fact">
+                  <span class="content__fact-label">Languages: </span>
+                  <span class="content__fact-value">English </span>
+                </li>
+                <li class="content__fact">
+                  <span class="content__fact-label">Genres: </span>
+                  <span class="content__fact-value"
+                    >Horror • Science Fiction • Action
+                  </span>
+                </li>
+                <li class="content__fact">
+                  <span class="content__fact-label">Country: </span>
+                  <span class="content__fact-value"
+                    >United States of America
+                  </span>
+                </li>
+                <li class="content__fact">
+                  <span class="content__fact-label">Budget: </span>
+                  <span class="content__fact-value">80 000 000 $ </span>
+                </li>
+                <li class="content__fact">
+                  <span class="content__fact-label">Premiere: </span>
+                  <span class="content__fact-value">August 13, 2024 </span>
+                </li>
+              </ul>
+
+              <div class="play-button">
+                <a
+                  data-fancybox
+                  data-caption="Movie trailer"
+                  href="https://youtu.be/x0XDEhP4MQs?si=kjXXEdyCwpedHHbi"
+                  class="play"
+                >
+                  <img
+                    class="playImg"
+                    src="assets/playButton.svg"
+                    alt="play button"
+                  />
+                </a>
+              </div>
+
+              <!-- /.play -->
+            </div>
+            <div class="content-image">
+              <img class="hero" src="assets/hero.png" alt="hero image" />
+            </div>
           </div>
           <!-- /.content -->
-          <a
-            data-fancybox
-            data-caption="Movie trailer"
-            href="https://youtu.be/x0XDEhP4MQs?si=kjXXEdyCwpedHHbi"
-            class="play"
-          >
-            <img
-              class="playImg"
-              src="assets/playButton.svg"
-              alt="play button"
-            />
-          </a>
-
-          <!-- /.play -->
         </div>
         <!-- /.main-content -->
 
@@ -130,106 +140,104 @@
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <h3 class="serie-title">Alien (1979)</h3>
-                <a
-                  href="https://youtu.be/4lRNBd8Vook?si=HLnGflyDvZTzFSPs"
-                  target="_blank"
-                >
-                  <img src="assets/series/alien_1979.png" alt="Alien (1979)" />
-                </a>
+                <div class="card series-1">
+                  <span class="card-subtitle">Episode # 1</span>
+                  <h2 class="serie-title">Alien (1979)</h2>
+                  <a
+                    href="https://youtu.be/4lRNBd8Vook?si=HLnGflyDvZTzFSPs"
+                    target="_blank"
+                  >
+                  </a>
+                </div>
               </div>
 
               <div class="swiper-slide">
-                <h3 class="serie-title">Aliens (1986)</h3>
-                <a
-                  href="https://youtu.be/oSeQQlaCZgU?si=km6F8IJ-XnL9-Ai-"
-                  target="_blank"
-                >
-                  <img
-                    src="assets/series/aliens_1986.png"
-                    alt="Aliens (1986)"
-                  />
-                </a>
+                <div class="card series-2">
+                  <span class="card-subtitle">Episode # 2</span>
+                  <h2 class="serie-title">Aliens (1986)</h2>
+                  <a
+                    href="https://youtu.be/oSeQQlaCZgU?si=km6F8IJ-XnL9-Ai-"
+                    target="_blank"
+                  >
+                  </a>
+                </div>
               </div>
 
               <div class="swiper-slide">
-                <h3 class="serie-title">Alien 3 (1992)</h3>
-                <a
-                  href="https://youtu.be/KUTaNMJJBa8?si=40Sog4JmgPOWnwZM"
-                  target="_blank"
-                >
-                  <img
-                    src="assets/series/alien_3_1992.png"
-                    alt="Alien 3 (1992)"
-                  />
-                </a>
+                <div class="card series-2">
+                  <span class="card-subtitle">Episode # 3</span>
+                  <h2 class="serie-title">Alien 3 (1992)</h2>
+                  <a
+                    href="https://youtu.be/KUTaNMJJBa8?si=40Sog4JmgPOWnwZM"
+                    target="_blank"
+                  >
+                  </a>
+                </div>
               </div>
 
               <div class="swiper-slide">
-                <h3 class="serie-title">Alien: Resurrection (1997)</h3>
-                <a
-                  href="https://youtu.be/53If-aOy58A?si=GIXuXzV-4HS9SkzV"
-                  target="_blank"
-                >
-                  <img
-                    src="assets/series/alien_resurrection_1997.png"
-                    alt="Alien: Resurrection (1997)"
-                  />
-                </a>
+                <div class="card series-2">
+                  <span class="card-subtitle">Episode # 4</span>
+                  <h2 class="serie-title">Alien: Resurrection (1997)</h2>
+                  <a
+                    href="https://youtu.be/53If-aOy58A?si=GIXuXzV-4HS9SkzV"
+                    target="_blank"
+                  >
+                  </a>
+                </div>
               </div>
 
               <div class="swiper-slide">
-                <h3 class="serie-title">Alien vs. Predator (2004)</h3>
-                <a
-                  href="https://youtu.be/Cld40qD7HcY?si=8taAknbyhQxGSDqc"
-                  target="_blank"
-                >
-                  <img
-                    src="assets/series/aliens_vs_predator_2004.png"
-                    alt="Alien vs. Predator (2004)"
-                  />
-                </a>
+                <div class="card series-2">
+                  <span class="card-subtitle">Episode # 5</span>
+                  <h2 class="serie-title">Alien vs. Predator (2004)</h2>
+                  <a
+                    href="https://youtu.be/Cld40qD7HcY?si=8taAknbyhQxGSDqc"
+                    target="_blank"
+                  >
+                  </a>
+                </div>
               </div>
 
               <div class="swiper-slide">
-                <h3 class="serie-title">Aliens vs. Predator: Requiem (2007)</h3>
-                <a
-                  href="https://youtu.be/XbTWLrZLYmU?si=ojm5cl7rkRSC-bmY"
-                  target="_blank"
-                >
-                  <img
-                    src="assets/series/alien_predator_2007.png"
-                    alt="Aliens vs. Predator: Requiem (2007)"
-                  />
-                </a>
+                <div class="card series-2">
+                  <span class="card-subtitle">Episode # 6</span>
+                  <h2 class="serie-title">
+                    Aliens vs. Predator: Requiem (2007)
+                  </h2>
+                  <a
+                    href="https://youtu.be/XbTWLrZLYmU?si=ojm5cl7rkRSC-bmY"
+                    target="_blank"
+                  >
+                  </a>
+                </div>
               </div>
 
               <div class="swiper-slide">
-                <h3 class="serie-title">Prometheus (2012)</h3>
-                <a
-                  href="https://youtu.be/XbTWLrZLYmU?si=PeIRkizUGZxwRMa0"
-                  target="_blank"
-                >
-                  <img
-                    src="assets/series/prometheus_2012.png"
-                    alt="Prometheus (2012)"
-                  />
-                </a>
+                <div class="card series-2">
+                  <span class="card-subtitle">Episode # 7</span>
+                  <h2 class="serie-title">Prometheus (2012)</h2>
+                  <a
+                    href="https://youtu.be/XbTWLrZLYmU?si=PeIRkizUGZxwRMa0"
+                    target="_blank"
+                  >
+                  </a>
+                </div>
               </div>
 
               <div class="swiper-slide">
-                <h3 class="serie-title">Alien: Covenant (2017)</h3>
-                <a
-                  href="https://youtu.be/svnAD0TApb8?si=WLrGiJ4tBGkQoeAX"
-                  target="_blank"
-                >
-                  <img
-                    src="assets/series/alien_covenant_2017.png"
-                    alt="Alien: Covenant (2017)"
-                  />
-                </a>
+                <div class="card series-2">
+                  <span class="card-subtitle">Episode # 8</span>
+                  <h2 class="serie-title">Alien: Covenant (2017)</h2>
+                  <a
+                    href="https://youtu.be/svnAD0TApb8?si=WLrGiJ4tBGkQoeAX"
+                    target="_blank"
+                  >
+                  </a>
+                </div>
               </div>
             </div>
+
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
             <div class="swiper-pagination"></div>
@@ -245,7 +253,7 @@
         <div class="footer-content">
           <span class="copyright"
             >© 2024 This page uses information from the TMDB API. All rights
-            reserved. Filmbolaget FS"</span
+            reserved. Filmbolaget FS</span
           >
         </div>
       </div>
