feat: connected animation

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+    />
 
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/style.css" />
@@ -82,7 +86,9 @@
                 terrifying life form in the universe.
               </p>
 
-              <ul class="main-description content__facts">
+              <ul
+                class="main-description content__facts animate__animated animate__fadeInRight"
+              >
                 <li class="content__fact">
                   <span class="content__fact-label">Languages: </span>
                   <span class="content__fact-value">English </span>
